[gd_scene load_steps=4 format=2]

[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/characters/puppeteer/puppet_area.gd" type="Script" id=1]
[ext_resource path="res://overlap/hurtbox.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="PuppetHurtbox" type="Area2D" parent="."]
scale = Vector2( 40, 40 )
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="PuppetHurtbox"]
modulate = Color( 0.12549, 1, 0, 1 )
shape = SubResource( 1 )

[node name="HitCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="PuppetHurtbox" to="." method="_on_PuppetHurtbox_body_entered"]
[connection signal="body_exited" from="PuppetHurtbox" to="." method="_on_PuppetHurtbox_body_exited"]
[connection signal="timeout" from="HitCooldownTimer" to="." method="_on_HitCooldownTimer_timeout"]
